--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'  //另外新增依賴 後要記得Gradle refresh
+	
+	//使用資料庫
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  //另外新增依賴 後要記得Gradle refresh
+	
+	//MySQL connector
+	implementation 'mysql:mysql-connector-java:8.0.31'  //另外新增依賴 後要記得Gradle refresh
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
