--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,13 @@ dependencies {
 	//MySQL connector
 	implementation 'mysql:mysql-connector-java:8.0.31'  //另外新增依賴 後要記得Gradle refresh
 	
+	//swagger
+	//方式一
+	//implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	//方式二
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+	
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
