--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
 
+#sql 檔案來源
+spring.sql.init.schema-locations=classpath:schema_mysql.sql
+#[always][embedded][never]
+spring.sql.init.mode=always
