--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,12 @@ dependencies {
 	//¤è¦¡¤G
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	
+	//cache
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	//caffeine
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+	
+	
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
